[metadata]
name = minitv
description = An alignment viewer using AliTV
long_description = file: README.md
keywords = bioinformatics, visualization
license = GPLv3
author = Travis Wrightsman
author_email = traviswrightsman@gmail.com
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires =
    >=3.6
install_requires =
    biopython>=1.70
    DendroPy>=4.3.0
    numpy>=1.14.0
    pandas>=0.22.0
    python-dateutil>=2.6.1
    pytz>=2017.3
    six>=1.11.0

[options.packages.find]
exclude =
    test_data
